--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,13 @@ authors = [
 ]
 description = "Package description"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 keywords = ["one", "two"]
 license = { text = "MIT" }
 classifiers = ["Programming Language :: Python :: 3"]
 dependencies = [
-    'importlib-metadata; python_version<"3.8"',
-    "pandas==2.2.3",
+    "pandas~=2.2",
     "pyarrow==17.0.0",
-    "pydantic==2.9.1",
     "duckdb==1.1.1",
     "deltalake==0.20.1",
 ]
