add freezegun to dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-test = ["pytest", "pytest-cov"]
+test = ["pytest", "pytest-cov", "freezegun"]
 release = ["build", "twine"]
 static-code-qa = ["pre-commit"]
 dev = ["spaceship[test,release,static-code-qa]"]
