--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pyarrow==17.0.0",
     "duckdb==1.1.1",
     "deltalake==0.20.1",
+    "sqlglot==25.24.1",
 ]
 dynamic = ["version"]
 
