--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "duckdb==1.1.1",
     "deltalake==0.20.1",
     "sqlglot==25.24.1",
+    "psutil==6.0.0",
 ]
 dynamic = ["version"]
 
