--- a/.github/workflows/build-test-publish.yaml
+++ b/.github/workflows/build-test-publish.yaml
@@ -86,6 +86,8 @@ jobs:
 
   execute-tests-tox:
     runs-on: ${{ matrix.os }}
+    needs:
+      - build-wheel-and-sdist
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
