--- a/.github/workflows/build-test-publish.yaml
+++ b/.github/workflows/build-test-publish.yaml
@@ -85,12 +85,11 @@ jobs:
   #         /bin/bash -x run.sh test:ci
 
   execute-tests-tox:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs:
       - build-wheel-and-sdist
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
         python-version: [3.10, 3.11, 3.12]  # Run tests on all versions
     steps:
       - uses: actions/checkout@v3
