--- a/.github/workflows/build-test-publish.yaml
+++ b/.github/workflows/build-test-publish.yaml
@@ -90,9 +90,13 @@ jobs:
       - build-wheel-and-sdist
     strategy:
       matrix:
-        python-version: [3.10, 3.11, 3.12]  # Run tests on all versions
+        python-version: ['3.10', '3.11', '3.12']  # Run tests on all versions
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Download wheel and sdist
         uses: actions/download-artifact@v4
         with:
